--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bourbon": "^7.0.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
+    "react-awesome-reveal": "^2.4.2",
     "react-card-flip": "^1.0.10",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1"
